--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,13 @@
     <item name="android:background">@color/signout</item>
   </style>
 
+  <style name="TextLabel" parent="TextAppearance.AppCompat">
+    <!-- Hint color and label color in FALSE state -->
+    <item name="android:textColorHint">@color/yellow_emoji_contrast</item>
+    <item name="android:textSize">20sp</item>
+    <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+    <item name="colorAccent">@color/yellow_emoji_contrast</item>
+    <item name="colorControlNormal">@color/yellow_emoji_contrast</item>
+    <item name="colorControlActivated">@color/yellow_emoji_contrast</item>
+  </style>
 </resources>
