I made it so that users can only input one emoji, enforcing the rule that their pet is just one emoji character and that allows the text views for the pet to appear safely.

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -110,6 +110,7 @@
             android:id="@+id/create_emoji_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="2"
             android:hint="@string/and_just_one_emoji"/>
         </android.support.design.widget.TextInputLayout>
       </LinearLayout>
