Imrpoved the buttons on the PetFragment

--- a/app/src/main/res/layout/fragment_pet.xml
+++ b/app/src/main/res/layout/fragment_pet.xml
@@ -3,11 +3,11 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/pet_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:focusableInTouchMode="true"
-  android:id="@+id/pet_layout"
-  android:background="@drawable/gradient_lists">
+  android:background="@drawable/gradient_lists"
+  android:focusableInTouchMode="true">
 
   <TextView
     android:id="@+id/cuddle"
@@ -15,9 +15,9 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
+    app:layout_constraintEnd_toStartOf="@+id/play_top"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/play_top"
     tools:text="Cuddle"/>
 
   <TextView
@@ -37,9 +37,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
+    app:layout_constraintEnd_toStartOf="@+id/potty_top"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/cuddle"
-    app:layout_constraintEnd_toStartOf="@+id/potty_top"
     tools:text="Hunger"/>
 
   <TextView
@@ -55,12 +55,12 @@
     tools:text="Potty"/>
 
   <!--<TextView-->
-    <!--android:id="@+id/pet_status"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="18dp"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
+  <!--android:id="@+id/pet_status"-->
+  <!--android:layout_width="wrap_content"-->
+  <!--android:layout_height="wrap_content"-->
+  <!--android:layout_marginTop="18dp"-->
+  <!--app:layout_constraintStart_toStartOf="parent"-->
+  <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
 
   <android.support.constraint.Guideline
     android:id="@+id/right_guide"
@@ -68,7 +68,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_percent=".75"/>
-<!--     android:layout_marginTop="18dp"
+  <!--     android:layout_marginTop="18dp"
     android:layout_marginLeft="16dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/mana"/> -->
@@ -77,16 +77,14 @@
     android:id="@+id/pet_status_edit_layout"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="12dp"
     android:background="@drawable/edit_text_background"
     app:hintAnimationEnabled="true"
     app:hintEnabled="true"
-    android:layout_marginTop="24dp"
-    android:layout_marginStart="12dp"
-    app:layout_constraintBottom_toTopOf="@+id/pet"
     app:layout_constraintEnd_toEndOf="@id/right_guide"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/play_top">
+    app:layout_constraintTop_toBottomOf="@+id/hunger_top">
     <android.support.design.widget.TextInputEditText
       android:id="@+id/pet_status_edit"
       android:layout_width="match_parent"
@@ -103,12 +101,12 @@
   <!--android:background="@drawable/edit_text_background"-->
 
   <!--<EditText-->
-    <!--android:id="@+id/pet_status_edit"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintRight_toLeftOf="@id/pet_status_edit"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
+  <!--android:id="@+id/pet_status_edit"-->
+  <!--android:layout_width="wrap_content"-->
+  <!--android:layout_height="wrap_content"-->
+  <!--app:layout_constraintStart_toStartOf="parent"-->
+  <!--app:layout_constraintRight_toLeftOf="@id/pet_status_edit"-->
+  <!--app:layout_constraintTop_toBottomOf="@+id/mana"/>-->
 
   <ImageButton
     android:id="@+id/pet_status_set_button"
@@ -116,108 +114,103 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
+    android:background="@null"
     android:text="@string/post"
     android:visibility="gone"
     app:layout_constraintEnd_toEndOf="@+id/pet_status_edit_layout"
     app:layout_constraintTop_toBottomOf="@+id/pet_status_edit_layout"
-    android:background="@null"
     app:srcCompat="@drawable/post_button"/>
 
   <!--<TextView-->
-    <!--android:id="@+id/character"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:layout_marginBottom="8dp"-->
-    <!--android:text="🍜"-->
-    <!--android:textSize="128sp"-->
-    <!--app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintHorizontal_bias="0.501"-->
-    <!--app:layout_constraintLeft_toLeftOf="parent"-->
-    <!--app:layout_constraintRight_toRightOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/mana"-->
-    <!--app:layout_constraintVertical_bias="0.379"/>-->
+  <!--android:id="@+id/character"-->
+  <!--android:layout_width="wrap_content"-->
+  <!--android:layout_height="wrap_content"-->
+  <!--android:layout_marginTop="8dp"-->
+  <!--android:layout_marginBottom="8dp"-->
+  <!--android:text="🍜"-->
+  <!--android:textSize="128sp"-->
+  <!--app:layout_constraintBottom_toBottomOf="parent"-->
+  <!--app:layout_constraintEnd_toEndOf="parent"-->
+  <!--app:layout_constraintHorizontal_bias="0.501"-->
+  <!--app:layout_constraintLeft_toLeftOf="parent"-->
+  <!--app:layout_constraintRight_toRightOf="parent"-->
+  <!--app:layout_constraintStart_toStartOf="parent"-->
+  <!--app:layout_constraintTop_toBottomOf="@+id/mana"-->
+  <!--app:layout_constraintVertical_bias="0.379"/>-->
 
   <com.varunest.sparkbutton.SparkButton
     android:id="@+id/food"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
     android:layout_centerHorizontal="true"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.674"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.829"
+    app:layout_constraintEnd_toStartOf="@id/potty"
     app:sparkbutton_activeImage="@drawable/food_emoji_active"
-    app:sparkbutton_iconSize="40dp"
+    app:sparkbutton_iconSize="60dp"
     app:sparkbutton_inActiveImage="@drawable/food_emoji_inactive"
     app:sparkbutton_primaryColor="@color/food_color1"
     app:sparkbutton_secondaryColor="@color/food_color2"/>
 
   <com.varunest.sparkbutton.SparkButton
-    android:id="@+id/cuddles"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:layout_centerHorizontal="true"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.052"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.829"
-    app:sparkbutton_activeImage="@drawable/cuddle_active"
-    app:sparkbutton_iconSize="40dp"
-    app:sparkbutton_inActiveImage="@drawable/cuddle_inactive"
-    app:sparkbutton_primaryColor="@color/hug_color1"
-    app:sparkbutton_secondaryColor="@color/hug_color2"/>
-
-  <com.varunest.sparkbutton.SparkButton
     android:id="@+id/play"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:layout_centerHorizontal="true"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintBottom_toTopOf="@+id/potty"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.328"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.829"
+    app:layout_constraintStart_toEndOf="@+id/cuddles"
     app:sparkbutton_activeImage="@drawable/play_active"
-    app:sparkbutton_iconSize="40dp"
+    app:sparkbutton_iconSize="60dp"
     app:sparkbutton_inActiveImage="@drawable/play_inactive"
     app:sparkbutton_primaryColor="@color/play_color1"
     app:sparkbutton_secondaryColor="@color/play_color2"/>
 
-  <com.varunest.sparkbutton.SparkButton
-    android:id="@+id/potty"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:layout_centerHorizontal="true"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="0.947"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.829"
-    app:sparkbutton_activeImage="@drawable/poop_active"
-    app:sparkbutton_iconSize="40dp"
-    app:sparkbutton_inActiveImage="@drawable/poop_inactive"
-    app:sparkbutton_primaryColor="@color/potty_color1"
-    app:sparkbutton_secondaryColor="@color/potty_color2"/>
   <TextView
     android:id="@+id/pet"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:textSize="128sp"
     android:textColor="@color/colorPrimaryDark"
-    app:layout_constraintBottom_toTopOf="@+id/potty"
+    android:textSize="128sp"
+    app:layout_constraintBottom_toTopOf="@+id/play"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/play_top"/>
+    />
+  <com.varunest.sparkbutton.SparkButton
+    android:id="@+id/cuddles"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_centerHorizontal="true"
+    app:layout_constraintBottom_toTopOf="@+id/food"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toStartOf="@id/play"
+    app:sparkbutton_activeImage="@drawable/cuddle_active"
+    app:sparkbutton_iconSize="60dp"
+    app:sparkbutton_inActiveImage="@drawable/cuddle_inactive"
+    app:sparkbutton_primaryColor="@color/hug_color1"
+    app:sparkbutton_secondaryColor="@color/hug_color2"/>
+  <com.varunest.sparkbutton.SparkButton
+    android:id="@+id/potty"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_centerHorizontal="true"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@+id/food"
+    app:sparkbutton_activeImage="@drawable/poop_active"
+    app:sparkbutton_iconSize="60dp"
+    app:sparkbutton_inActiveImage="@drawable/poop_inactive"
+    app:sparkbutton_primaryColor="@color/potty_color1"
+    app:sparkbutton_secondaryColor="@color/potty_color2"/>
 
 </android.support.constraint.ConstraintLayout>
